--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
 VITE_API_URL=https://ajingolik.fun/api
-VITE_WEBSOCKET_URL=ws://ajingolik.fun/ws
+VITE_WEBSOCKET_URL=wss://ajingolik.fun/ws
 VITE_GOOGLE_CLIENT_ID=placeholder-value
